--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -4,6 +4,6 @@
     box-sizing: border-box;
 }
 body{
-    background-color: white;
+    background-color: transparent;
     font-family: 'Roboto', sans-serif;
 }
